packages/build/tests/error/monitor/fixtures/cancel_build/plugin.js
module.exports = {
  onPreBuild({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
